add navigation bar WIP

--- a/ProiectIS-war/web/Static/src/stylus/common/colors.styl
+++ b/ProiectIS-war/web/Static/src/stylus/common/colors.styl
@@ -1,5 +1,5 @@
 $color-1            =           #F4F4F4;
-$color-2            =           #CCCCCC;
+$color-2            =           #333333;
 $color-3            =           rgba(0, 0, 0, 0.4);
 $color-4            =           rgba(0, 0, 0, 0.8);
 $color-5            =           rgba(255, 255, 255, 0.4);
