--- a/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
+++ b/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
@@ -1,13 +1,30 @@
 /* General Global CSS */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: rem(16);
+  font-weight: normal;
+}
+
+.app-container {
+  width: 100vw;
+  height: 100vh;
+  background-color: $color-1;
+}
+
+.main {
+  margin-left: rem(120);
+  padding: 0 rem(10);
 }
