--- a/ProiectIS-war/web/Static/src/stylus/modules/navigation.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/navigation.styl
@@ -1,11 +1,26 @@
 .header {
-    background-color: $color-2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: rem(120);
     height 100%;
+    padding-bottom: rem(60);
     position: fixed;
     top: 0;
     left 0;
     z-index: 1;
+    background-color: $color-2;
+
+    .user-icon {
+        width: rem(80);
+        height: rem(80);
+        margin: 0 auto;
+        border-radius: 50%;
+        background-image: url('../../src/assets/images/user.jpg');
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
 }
 
 .navigation {
