add new navigation bar

--- a/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
+++ b/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: rem(16);
   font-weight: normal;
 }
@@ -25,6 +25,6 @@ body {
 }
 
 .main {
-  margin-left: rem(120);
+  margin-left: rem(160);
   padding: 0 rem(10);
 }
