--- a/ProiectIS-war/web/Static/src/stylus/common/colors.styl
+++ b/ProiectIS-war/web/Static/src/stylus/common/colors.styl
@@ -6,6 +6,7 @@ $color-5            =           rgba(255, 255, 255, 0.4);
 $color-6            =           rgba(255, 255, 255, 0.6);
 $color-7            =           #DF6060;
 $color-8            =           #6CC36E;
+$color-9            =           #979797;
 
 $link-default       =           $color-3;
 $link-hover         =           black;
