--- a/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
+++ b/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
@@ -26,5 +26,52 @@ body {
 
 .main {
   margin-left: rem(160);
-  padding: 0 rem(10);
+  padding: rem(30) rem(20);
+}
+
+.btn {
+  width: 100%;
+  height: 100%;
+  max-width: rem(140);
+  max-height: rem(80);
+  text-align: center;
+  font-size: rem(14);
+  color: white;
+  background-color: $color-2;
+  border: none;
+
+  &:focus {
+    outline: rem(1) solid rgba(0,0,0,0.2);
+  }
+}
+
+.btn-minus {
+  max-width: rem(20);
+  max-height: rem(20);
+  color: $color-9;
+  background: none;
+  border: none;
+  font-size: rem(16);
+  margin-right: rem(4);
+}
+
+.btn-plus {
+  max-width: rem(20);
+  max-height: rem(20);
+  color: $color-9;
+  background: none;
+  border: none;
+  font-size: rem(16);
+  margin-left: rem(4);
+}
+
+.btn-delete {
+  max-width: rem(58);
+  min-height: rem(58);
+  font-size: rem(38);
+  background: none;
+  color: $color-7;
+}
+
+.btn-confirm {
 }
