--- a/ProiectIS-war/web/Static/src/stylus/modules/navigation.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/navigation.styl
@@ -32,7 +32,7 @@
 
     &__name {
         font-size: rem(14);
-        color: white;
+        color: rgba(255,255,255,0.8);
         text-transform: uppercase;
     }
 }
