--- a/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
+++ b/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
@@ -25,16 +25,25 @@ body {
 }
 
 .main {
+  display: flex;
+  width: 100%;
+  height: 100%;
   margin-left: rem(160);
   padding: rem(30) rem(20);
 }
 
-.btn {
+.wrapper {
   width: 100%;
   height: 100%;
-  max-width: rem(140);
-  max-height: rem(80);
+  display: flex;
+  flex-direction: column;
+}
+
+.btn {
+  width: rem(140);
+  height: rem(80);
   text-align: center;
+  text-transform: uppercase;
   font-size: rem(14);
   color: white;
   background-color: $color-2;
@@ -53,6 +62,7 @@ body {
   border: none;
   font-size: rem(16);
   margin-right: rem(4);
+  padding: 0;
 }
 
 .btn-plus {
@@ -63,6 +73,7 @@ body {
   border: none;
   font-size: rem(16);
   margin-left: rem(4);
+  padding: 0;
 }
 
 .btn-delete {
@@ -71,6 +82,14 @@ body {
   font-size: rem(38);
   background: none;
   color: $color-7;
+  padding: 0;
+
+  &.-huge {
+    max-width: rem(140);
+    color: white;
+    background-color: $color-7;
+    font-size: rem(14);
+  }
 }
 
 .btn-confirm {
