--- a/ProiectIS-war/web/Static/src/stylus/modules/products.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/products.styl
@@ -3,6 +3,7 @@
     &__container {
         width: 100%;
         max-width: rem(744);
+        min-width: rem(744);
         height: 100%;
         min-height: rem(560);
         max-height: rem(560);
@@ -34,7 +35,7 @@
     &__data {
         overflow: hidden;
         word-wrap: break-word;
-        max-width: rem(266);
+        min-width: rem(266);
     }
 
     &__title {
