--- a/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
+++ b/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
@@ -26,15 +26,11 @@ body {
 
 .main {
   display: flex;
-  width: 100%;
-  height: 100%;
   margin-left: rem(160);
   padding: rem(30) rem(20);
 }
 
 .wrapper {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -51,6 +47,20 @@ body {
 
   &:focus {
     outline: rem(1) solid rgba(0,0,0,0.2);
+  }
+
+  &.-small {
+    width: rem(92);
+    height: rem(60);
+    border: rem(1) solid white;
+    font-size: rem(18);
+  }
+
+  &.-extra {
+    width: rem(184);
+    height: rem(60);
+    border: rem(1) solid white;
+    font-size: rem(18);
   }
 }
 
@@ -84,6 +94,17 @@ body {
   color: $color-7;
   padding: 0;
 
+  &.-small {
+    width: 100%;
+    max-width: rem(66);
+    height: 100%;
+    min-height: rem(60);
+    color: white;
+    background-color: $color-7;
+    font-size: rem(18);
+    border: rem(1) solid white;
+  }
+
   &.-huge {
     max-width: rem(140);
     color: white;
@@ -93,4 +114,18 @@ body {
 }
 
 .btn-confirm {
+  width: 100%;
+  max-width: rem(350);
+  height: 100%;
+  max-height: rem(62);
+  background-color: $color-8;
+  color: white;
+  font-size: rem(24);
+
+  &.-extra {
+    max-width: rem(66);
+    min-height: rem(180);
+    border: rem(1) solid white;
+    font-size: rem(18);
+  }
 }
