--- a/ProiectIS-war/web/Static/src/stylus/main.styl
+++ b/ProiectIS-war/web/Static/src/stylus/main.styl
@@ -8,3 +8,6 @@
 @import "modules/navigation";
 @import "modules/products";
 @import "modules/actions";
+@import "modules/keypad";
+@import "modules/subtotal";
+@import "modules/total";
