fix resizing problems WIP

--- a/ProiectIS-war/web/Static/src/stylus/modules/actions.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/actions.styl
@@ -1,7 +1,11 @@
 .action {
+    display: flex;
     padding-top: rem(14);
+    justify-content: space-between;
+    padding-bottom: rem(10);
+    
     .btn {
-        margin-right: rem(7);
+        margin-right: rem(4);
 
         &:last-child {
             margin-right: 0;
