--- a/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
+++ b/ProiectIS-war/web/Static/src/stylus/common/defaults.styl
@@ -19,25 +19,35 @@ body {
 }
 
 .app-container {
-  width: 100vw;
   height: 100vh;
   background-color: $color-1;
 }
 
 .main {
-  display: flex;
   margin-left: rem(160);
   padding: rem(30) rem(20);
+  
+
+  @media screen and (max-device-height: $tablet) {
+    padding-top: rem(20);
+    padding-bottom: 0;
+  }
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
+  width: 68%;
 }
 
 .btn {
-  width: rem(140);
-  height: rem(80);
+  width: rem(160);
+  height: rem(70);
   text-align: center;
   text-transform: uppercase;
   font-size: rem(14);
@@ -45,19 +55,22 @@ body {
   background-color: $color-2;
   border: none;
 
+
   &:focus {
     outline: rem(1) solid rgba(0,0,0,0.2);
   }
 
   &.-small {
-    width: rem(92);
+    padding: 0;
+    width: rem(76);
     height: rem(60);
     border: rem(1) solid white;
     font-size: rem(18);
   }
 
   &.-extra {
-    width: rem(184);
+    padding: 0;
+    width: rem(152);
     height: rem(60);
     border: rem(1) solid white;
     font-size: rem(18);
@@ -65,8 +78,8 @@ body {
 }
 
 .btn-minus {
-  max-width: rem(20);
-  max-height: rem(20);
+  width: rem(20);
+  height: rem(20);
   color: $color-9;
   background: none;
   border: none;
@@ -87,26 +100,23 @@ body {
 }
 
 .btn-delete {
-  max-width: rem(58);
-  min-height: rem(58);
+  width: auto;
   font-size: rem(38);
   background: none;
   color: $color-7;
   padding: 0;
 
   &.-small {
-    width: 100%;
-    max-width: rem(66);
-    height: 100%;
-    min-height: rem(60);
+    padding: rem(28) rem(16);
     color: white;
     background-color: $color-7;
     font-size: rem(18);
+    line-height: 0;
     border: rem(1) solid white;
   }
 
   &.-huge {
-    max-width: rem(140);
+    width: rem(160);
     color: white;
     background-color: $color-7;
     font-size: rem(14);
@@ -115,16 +125,15 @@ body {
 
 .btn-confirm {
   width: 100%;
-  max-width: rem(350);
-  height: 100%;
-  max-height: rem(62);
+  height: rem(60);
   background-color: $color-8;
   color: white;
   font-size: rem(24);
 
   &.-extra {
-    max-width: rem(66);
-    min-height: rem(180);
+    width: 100%;
+    height: 100%;
+    padding: 0;
     border: rem(1) solid white;
     font-size: rem(18);
   }
