--- a/ProiectIS-war/web/Static/src/stylus/modules/products.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/products.styl
@@ -2,15 +2,13 @@
     
     &__container {
         width: 100%;
-        max-width: rem(744);
-        min-width: rem(744);
-        height: 100%;
-        min-height: rem(560);
+        height: 80vh; 
         max-height: rem(560);
         padding: rem(14) rem(18);
         background-color: white;
         box-shadow: 0 0 rem(8) 0 rgba(124,124,124,45);
-        overflow: scroll;
+        overflow: hidden;
+        //overflow-y: scroll;
     }
 
     &__list {
