--- a/ProiectIS-war/web/Static/src/stylus/modules/actions.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/actions.styl
@@ -1,6 +1,6 @@
 .action {
     display: flex;
-    padding-top: rem(14);
+    padding-top: 3vh;
     justify-content: space-between;
     padding-bottom: rem(10);
     
