--- a/ProiectIS-war/web/Static/src/stylus/modules/keypad.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/keypad.styl
@@ -1,7 +1,7 @@
 .keypad {
     width: 50%;
     height: 90vh;
-    padding: rem(14) rem(24);
+    padding: rem(14) 1.5vw;
     margin-left: rem(16);
     background-color: white;
     box-shadow: 0 0 rem(8) 0 rgba(124,124,124,45);
@@ -22,11 +22,12 @@
     &__display {
         width: 100%;
         margin: 0 auto;
-        margin-bottom: rem(22);
-        padding: rem(10) rem(2);
+        margin-bottom: 1.8vw;
+        padding: 1vw rem(2);
         border: rem(1) solid $color-9;
         text-align: right;
         font-size: rem(32);
+        
     }
 
     &__container {
