--- a/ProiectIS-war/web/Static/src/stylus/modules/subtotal.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/subtotal.styl
@@ -8,12 +8,12 @@
     }
 
     &__label {
-        font-size: rem(18);
+        font-size: 1.3vw;
         text-transform: uppercase;
     }
 
     &__value {
-        font-size: rem(18);
+        font-size: 1.3vw;
         text-transform: uppercase;
     }
 
@@ -48,13 +48,13 @@
 
 .discount {
     &__label {
-        font-size: rem(18);
+        font-size: 1.3vw;
         text-transform: uppercase;
         color: $color-7;
     }
 
     &__value {
-        font-size: rem(18);
+        font-size: 1.3vw;
         text-transform: uppercase;
         color: $color-7;
     }
