--- a/ProiectIS-war/web/Static/src/stylus/modules/total.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/total.styl
@@ -2,17 +2,17 @@
     &-container {
         display: flex;
         justify-content: space-between;
-        margin-top: rem(16);
-        padding-bottom: rem(24);
+        margin-top: 1.2vw;
+        padding-bottom: 1.6vw;
     }
 
     &__label {
-        font-size: rem(24);
+        font-size: 1.8vw;
         text-transform: uppercase;
     }
     
     &__value {
-        font-size: rem(24);
+        font-size: 1.8vw;
         text-transform: uppercase;
     }
 }
