--- a/ProiectIS-war/web/Static/src/stylus/modules/products.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/products.styl
@@ -2,8 +2,8 @@
     
     &__container {
         width: 100%;
-        height: 80vh; 
-        max-height: rem(560);
+        height: 78vh; 
+        max-height: 78vh;
         padding: rem(14) rem(18);
         background-color: white;
         box-shadow: 0 0 rem(8) 0 rgba(124,124,124,45);
