--- a/ProiectIS-war/web/Static/src/stylus/modules/subtotal.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/subtotal.styl
@@ -1,9 +1,9 @@
 .subtotal {
     &-container {
-        margin-top: rem(50); 
-
-        @media screen and (max-device-height: $tablet) {
-            margin-top: rem(20);
+        margin-top: rem(40); 
+        
+        @media screen and (min-device-width: 1920px) {
+             margin-top: rem(180);
         }
     }
 
