--- a/ProiectIS-war/web/Static/src/stylus/modules/products.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/products.styl
@@ -8,7 +8,7 @@
         background-color: white;
         box-shadow: 0 0 rem(8) 0 rgba(124,124,124,45);
         overflow: hidden;
-        //overflow-y: scroll;
+        overflow-y: scroll;
     }
 
     &__list {
