--- a/ProiectIS-war/web/Static/src/stylus/modules/products.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/products.styl
@@ -1,12 +1,12 @@
 .products {
-    
+
     &__container {
         width: 100%;
-        height: 78vh; 
+        height: 78vh;
         max-height: 78vh;
         padding: rem(14) rem(18);
         background-color: white;
-        box-shadow: 0 0 rem(8) 0 rgba(124,124,124,45);
+        box-shadow: 0 0 rem(8) 0 rgba(124, 124, 124, 45);
         overflow: hidden;
         overflow-y: scroll;
     }
@@ -44,7 +44,7 @@
     &__code {
         font-size: rem(16);
         font-weight: 300;
-        color: rgba(0,0,0,0.63);
+        color: rgba(0, 0, 0, 0.63);
         padding-top: rem(16);
     }
 
@@ -52,10 +52,10 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        
+
     }
 
-    &::after{
+    &::after {
         content: '';
         display: block;
         position: absolute;
