--- a/ProiectIS-war/web/Static/src/stylus/modules/subtotal.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/subtotal.styl
@@ -1,10 +1,12 @@
 .subtotal {
     &-container {
         margin-top: rem(40); 
+
         
-        @media screen and (min-device-width: 1920px) {
+        @media screen and (min-height: 1000px ) {
              margin-top: rem(180);
         }
+        
     }
 
     &__label {
