--- a/ProiectIS-war/web/Static/src/stylus/modules/keypad.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/keypad.styl
@@ -17,6 +17,10 @@
         flex-direction: column;
         padding-top: rem(28);
         overflow: hidden;
+
+        @media screen and (min-height: 1000px ) {
+            padding-top: rem(76);
+        }
     }
 
     &__display {
@@ -27,6 +31,10 @@
         border: rem(1) solid $color-9;
         text-align: right;
         font-size: rem(32);
+
+        @media screen and (min-height: 1000px ) {
+            margin-bottom: 3.8vw;
+        }
         
     }
 
