--- a/ProiectIS-war/web/Static/src/stylus/modules/navigation.styl
+++ b/ProiectIS-war/web/Static/src/stylus/modules/navigation.styl
@@ -17,6 +17,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        cursor: pointer;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
     &__icon {
         width: rem(80);
