--- a/src/main/resources/templates/admin/test.html
+++ b/src/main/resources/templates/admin/test.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>Admin Page</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
+    <!--<link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -25,8 +25,8 @@
                 <span th:utext="${userName}"></span>
             </div>
             <div class="panel-body">
-                <img th:src="@{/images/beer.jpg}" class="img-responsive center-block" width="400" height="400"
-                     alt="Beer"/>
+                <!--<img th:src="@{/images/beer.jpg}" class="img-responsive center-block" width="400" height="400"-->
+                     <!--alt="Beer"/>-->
             </div>
             <p class="admin-message-text text-center" th:utext="${adminMessage}"></p>
         </div>
