--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -30,6 +30,9 @@
                     </div>
                 </a>
             </li>
+            <li class="list__item">
+                <a href="/admin/addproduct">CLICK MEEE!!!</a>
+            </li>
         </ul>
     </nav>
     <div class="user__data" onclick="document.getElementById('modal').style.display='block'">
