Implemented product fetch 1/3

--- a/src/main/resources/templates/sale.html
+++ b/src/main/resources/templates/sale.html
@@ -22,108 +22,6 @@
             <div class="wrapper">
                 <div class="products__container">
                     <ul class="products__list">
-                        <li class="product">
-                            <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
-                            <div class="product__data">
-                                <h2 class="product__title">Consola Play Station 4 PRO</h2>
-                                <h4 class="product__code">Cod Produs: 1234</h4>
-                            </div>
-                            <div class="product__quantity">
-                                <button class="btn btn-minus fas fa-minus" type="button" name="minus"></button>
-                                <input class="quantity__input" type="text" name="quantity" value="1">
-                                <button class="btn btn-plus fas fa-plus" type="button" name="plus"></button>
-                            </div>
-                            <div class="product__price">
-                                <p class="price__label">Price</p>
-                                <p class="price__value">1899 RON</p>
-                            </div>
-                            <button class="btn btn-delete far fa-trash-alt"></button>
-                        </li>
-                        <li class="product">
-                            <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
-                            <div class="product__data">
-                                <h2 class="product__title">Consola Play Station 4 PRO</h2>
-                                <h4 class="product__code">Cod Produs: 1234</h4>
-                            </div>
-                            <div class="product__quantity">
-                                <button class="btn btn-minus fas fa-minus" type="button" name="minus"></button>
-                                <input class="quantity__input" type="text" name="quantity" value="1">
-                                <button class="btn btn-plus fas fa-plus" type="button" name="plus"></button>
-                            </div>
-                            <div class="product__price">
-                                <p class="price__label">Price</p>
-                                <p class="price__value">1899 RON</p>
-                            </div>
-                            <button class="btn btn-delete far fa-trash-alt"></button>
-                        </li>
-                        <li class="product">
-                            <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
-                            <div class="product__data">
-                                <h2 class="product__title">Consola Play Station 4 PRO</h2>
-                                <h4 class="product__code">Cod Produs: 1234</h4>
-                            </div>
-                            <div class="product__quantity">
-                                <button class="btn btn-minus fas fa-minus" type="button" name="minus"></button>
-                                <input class="quantity__input" type="text" name="quantity" value="1">
-                                <button class="btn btn-plus fas fa-plus" type="button" name="plus"></button>
-                            </div>
-                            <div class="product__price">
-                                <p class="price__label">Price</p>
-                                <p class="price__value">1899 RON</p>
-                            </div>
-                            <button class="btn btn-delete far fa-trash-alt"></button>
-                        </li>
-                        <li class="product">
-                            <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
-                            <div class="product__data">
-                                <h2 class="product__title">Consola Play Station 4 PRO</h2>
-                                <h4 class="product__code">Cod Produs: 1234</h4>
-                            </div>
-                            <div class="product__quantity">
-                                <button class="btn btn-minus fas fa-minus" type="button" name="minus"></button>
-                                <input class="quantity__input" type="text" name="quantity" value="1">
-                                <button class="btn btn-plus fas fa-plus" type="button" name="plus"></button>
-                            </div>
-                            <div class="product__price">
-                                <p class="price__label">Price</p>
-                                <p class="price__value">1899 RON</p>
-                            </div>
-                            <button class="btn btn-delete far fa-trash-alt"></button>
-                        </li>
-                        <li class="product">
-                            <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
-                            <div class="product__data">
-                                <h2 class="product__title">Consola Play Station 4 PRO</h2>
-                                <h4 class="product__code">Cod Produs: 1234</h4>
-                            </div>
-                            <div class="product__quantity">
-                                <button class="btn btn-minus fas fa-minus" type="button" name="minus"></button>
-                                <input class="quantity__input" type="text" name="quantity" value="1">
-                                <button class="btn btn-plus fas fa-plus" type="button" name="plus"></button>
-                            </div>
-                            <div class="product__price">
-                                <p class="price__label">Price</p>
-                                <p class="price__value">1899 RON</p>
-                            </div>
-                            <button class="btn btn-delete far fa-trash-alt"></button>
-                        </li>
-                        <li class="product">
-                            <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
-                            <div class="product__data">
-                                <h2 class="product__title">Consola Play Station 4 PRO</h2>
-                                <h4 class="product__code">Cod Produs: 1234</h4>
-                            </div>
-                            <div class="product__quantity">
-                                <button class="btn btn-minus fas fa-minus" type="button" name="minus"></button>
-                                <input class="quantity__input" type="text" name="quantity" value="1">
-                                <button class="btn btn-plus fas fa-plus" type="button" name="plus"></button>
-                            </div>
-                            <div class="product__price">
-                                <p class="price__label">Price</p>
-                                <p class="price__value">1899 RON</p>
-                            </div>
-                            <button class="btn btn-delete far fa-trash-alt"></button>
-                        </li>
                     </ul>
                 </div>
                 <div class="action">
@@ -187,8 +85,8 @@
 
 
 
-<script src="/static/build/js/main.js"></script>
-<script src="/static/build/js/sale.js"></script>
+<script th:src="@{/build/js/main.js}"></script>
+<script th:src="@{/build/js/sale.js}"></script>
 </body>
 
 </html>
