Implemented product fetch 2/3
Templating using HandlebarsJS.
If product exists in list it should increment its quantity

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -41,8 +41,8 @@
     </div>
 
 </header>
-<script th:src="@{/build/js/main.js{}"></script>
-<script th:src="@{/build/js/sale.js}"></script>
+<!--<script th:src="@{/build/js/main.js{}"></script>-->
+<!--<script th:src="@{/build/js/sale.js}"></script>-->
 </body>
 
 </body>
