--- a/src/main/resources/templates/fragments/productItem.html
+++ b/src/main/resources/templates/fragments/productItem.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       lang="en">
-<head>
-    <link rel="stylesheet" type="text/css" media="screen" th:href="@{/build/css/main.css}"/>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<head th:replace="fragments/head"/>
 <body>
 <li class="product" th:object="${product}">
     <img th:src="@{/src/assets/images/ps4.jpg}" alt="Product PS4" class="product__image">
