--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>POS Static Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-          crossorigin="anonymous"/>
-    <link rel="stylesheet" type="text/css" media="screen" th:href="@{/build/css/main.css}" />
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous"></script>
-</head>
+<head th:replace="fragments/head"/>
 
 <body>
 <div class="app-container">
-    <header th:replace="fragments/navbar ::header"/>
+    <header th:replace="fragments/navbar"/>
 </div>
-    <script src="/static/build/js/main.js"></script>
-    <script src="/static/build/js/sale.js"></script>
+    <div th:replace="fragments/footer :: footer"/>
 </body>
 
 </html>
