--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,14 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <title>Spring Security Tutorial</title>
-    <!--<link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" />-->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
-    <link rel="stylesheet" type="text/css" media="screen" href="build/css/main.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+<head th:replace="fragments/head"/>
 
 <body>
 <form th:action="@{/register}" method="get">
@@ -44,5 +37,6 @@
         </div>
     </form>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
