add new product button

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -8,15 +8,16 @@
                 </a>
             </li>
             <li class="list__item">
-                <a href="/sale">
-                    <div class="item__link js-new-sale">
-                        <i class="item__icon fas fa-shopping-basket"></i>
-                        <p class="item__title">New Sale</p>
-                    </div>
+                <a href="/sale" class="item__link js-new-sale">
+                    <i class="item__icon fas fa-shopping-basket"></i>
+                    <p class="item__title">New Sale</p>
                 </a>
             </li>
             <li class="list__item">
-                <a href="/admin/addproduct">CLICK MEEE!!!</a>
+                <a href="/admin/addproduct" class="item__link js-add-product">
+                    <i class="item__icon fas fa-plus-circle"></i>
+                    <p class="item__title">Add Product</p>
+                </a>
             </li>
         </ul>
     </nav>
