add login as default view

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 </form>
 
 <div class="container">
-    <form class="login__form animate" th:action="@{/login}" method="POST">
+    <form class="login__form" th:action="@{/login}" method="POST">
         <div class="login__image"></div>
 
         <div class="login__container">
