add signup button on login form

--- a/src/main/resources/static/src/stylus/common/defaults.styl
+++ b/src/main/resources/static/src/stylus/common/defaults.styl
@@ -111,6 +111,18 @@ body {
   padding: 0;
 }
 
+.btn-signup {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin-top: rem(20);
+  padding: rem(14) 0;
+  background-color: $color-2;
+  color: white;
+  font-size: rem(24);
+  text-decoration: none;
+}
+
 .btn-delete {
   width: auto;
   font-size: rem(38);
