--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,10 +5,6 @@
 <head th:replace="fragments/head"/>
 
 <body>
-<form th:action="@{/register}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Registration Page</button>
-</form>
-
 <div class="container">
     <form class="login__form" th:action="@{/login}" method="POST">
         <div class="login__image"></div>
@@ -22,6 +18,7 @@
             </div>
 
             <button type="submit" class="btn btn-confirm">Login</button>
+            <a href="/register" class="btn btn-signup">Sign Up</a>
             <label>
                 <input class="login__check" type="checkbox" checked="checked" name="remember"> Remember
                 me
@@ -31,7 +28,7 @@
         <div class="login__footer">
             <div class="login__container">
                 <button type="button" onclick="document.getElementById('modal').style.display='none'"
-                        class="btn btn-delete -huge">Cancel</button>
+                        class="btn btn-delete -huge">Cancel</button>       
                 <span class="psw">Forgot <a href="#">password?</a></span>
             </div>
         </div>
