modify register page

--- a/src/main/resources/static/src/stylus/common/defaults.styl
+++ b/src/main/resources/static/src/stylus/common/defaults.styl
@@ -121,6 +121,11 @@ body {
   color: white;
   font-size: rem(24);
   text-decoration: none;
+
+  &.-extraMargin {
+    margin-bottom: rem(20);
+  }
+
 }
 
 .btn-delete {
