--- a/src/main/resources/static/src/stylus/modules/login.styl
+++ b/src/main/resources/static/src/stylus/modules/login.styl
@@ -16,6 +16,13 @@
         padding: rem(10);
     }
 
+    &__intro {
+        text-align: center;
+        text-transform: uppercase;
+        margin: rem(20) auto;
+        font-size: rem(42);
+    }
+
     
     &__form {
         position: relative;
