removed add product button , dashboard page adds products now

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,7 +2,7 @@
     <nav class="navigation">
         <ul class="navigation__list">
             <li class="list__item">
-                <a href="#" class="item__link js-dash">
+                <a href="/admin/addproduct" class="item__link js-dash">
                     <i class="item__icon fas fa-chart-bar"></i>
                     <p class="item__title">Dashboard</p>
                 </a>
@@ -11,12 +11,6 @@
                 <a href="/sale" class="item__link js-new-sale">
                     <i class="item__icon fas fa-shopping-basket"></i>
                     <p class="item__title">New Sale</p>
-                </a>
-            </li>
-            <li class="list__item">
-                <a href="/admin/addproduct" class="item__link js-add-product">
-                    <i class="item__icon fas fa-plus-circle"></i>
-                    <p class="item__title">Add Product</p>
                 </a>
             </li>
         </ul>
