navbar user image href to login page

--- a/src/main/resources/static/src/stylus/common/defaults.styl
+++ b/src/main/resources/static/src/stylus/common/defaults.styl
@@ -18,6 +18,10 @@ body {
   font-weight: normal;
 }
 
+a {
+  text-decoration: none;
+}
+
 .app-container {
   height: 100vh;
   background-color: $color-1;
