--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,8 +15,10 @@
             </li>
         </ul>
     </nav>
-    <div class="user__data" onclick="document.getElementById('modal').style.display='block'">
-        <div class="user__icon"></div>
-        <p class="user__name">Vlad</p>
-    </div>
+    <a href="/login">
+        <div class="user__data">
+            <div class="user__icon"></div>
+            <p class="user__name">Vlad</p>
+        </div>
+    </a>
 </header>
