--- a/src/main/resources/templates/admin/addproduct.html
+++ b/src/main/resources/templates/admin/addproduct.html
@@ -59,7 +59,8 @@
 
             <div class="form-group">
                 <div class="col-sm-9">
-                    <input type="file" accept="image/png, image/jpeg" th:field="*{image}"
+                    <input id="imageUUID" type="hidden" th:field="*{image}"/>
+                    <input id="imageSelect" type="file" accept="image/png, image/jpeg"
                            placeholder="Image" class="form-control"/> <label
                         th:if="${#fields.hasErrors('image')}" th:errors="*{image}"
                         class="validation-message"></label>
@@ -78,8 +79,8 @@
         </form>
     </div>
 </div>
-<script src="/static/build/js/main.js"></script>
-<script src="/static/build/js/sale.js"></script>
+<script type="text/javascript" th:src="@{/build/js/sale.js}"></script>
+<script type="text/javascript" th:src="@{/build/js/addProduct.js}"></script>
 </body>
 
 </html>
