fix product data size

--- a/src/main/resources/static/src/stylus/modules/login.styl
+++ b/src/main/resources/static/src/stylus/modules/login.styl
@@ -5,7 +5,7 @@
         margin: rem(30) auto;
         margin-bottom: 0;
         border-radius: 50%;
-        background-image: url('../../src/assets/images/user.jpg');
+        background-image: url('../../src/assets/images/default_user.jpg');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
