--- a/src/main/resources/static/src/stylus/modules/navigation.styl
+++ b/src/main/resources/static/src/stylus/modules/navigation.styl
@@ -29,7 +29,7 @@
         margin: 0 auto;
         margin-bottom: rem(14);
         border-radius: 50%;
-        background-image: url('../../src/assets/images/user.jpg');
+        background-image: url('../../src/assets/images/default_user.jpg');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
