--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -18,7 +18,7 @@
     <a href="/login">
         <div class="user__data">
             <div class="user__icon"></div>
-            <p class="user__name">Vlad</p>
+            <p class="user__name">User</p>
         </div>
     </a>
 </header>
