--- a/src/main/resources/static/src/stylus/modules/products.styl
+++ b/src/main/resources/static/src/stylus/modules/products.styl
@@ -21,6 +21,7 @@
     position: relative;
     justify-content: space-between;
     align-items: center;
+    padding-right: rem(2);
 
     &__image {
         width: 100%;
@@ -34,11 +35,12 @@
     &__data {
         overflow: hidden;
         word-wrap: break-word;
-        min-width: rem(266);
+        min-width: rem(240);
+        max-width: rem(240)
     }
 
     &__title {
-        font-size: rem(20);
+        font-size: rem(18);
         font-weight: 400;
     }
 
@@ -46,7 +48,7 @@
         font-size: rem(16);
         font-weight: 300;
         color: rgba(0, 0, 0, 0.63);
-        padding-top: rem(16);
+        padding-top: rem(12);
     }
 
     &__quantity {
